# System-programming

./: Part 1
part3/: directory.sh
part3_changed/: directory.sh
part4/: .ninja_log  CMakeLists.txt  Makefile  calculator.cpp  compare.cpp  get_time.sh
part4/ninja-build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  rules.ninja
part4_changed/: .get_time.sh.swp  .ninja_deps  calculator.h  get_time.sh
part4_changed/ninja-build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja
